--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "HOST=0.0.0.0 PORT=${PORT:-3000} node .next/standalone/server.js"
+    "start": "next start -p ${PORT:-3000}"
   },
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "axios": "^1.7.2"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
