--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "^1.7.2"
+    "react-dom": "18.2.0"
   },
   "engines": {
     "node": ">=18.17.0"
