--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}"
+    "start": "HOST=0.0.0.0 PORT=${PORT:-3000} node .next/standalone/server.js",
+    "postbuild": "mkdir -p .next/standalone/public && cp -r public/. .next/standalone/public 2>/dev/null || true && mkdir -p .next/standalone/.next && cp -r .next/static .next/standalone/.next/static"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -13,6 +14,6 @@
     "react-dom": "18.2.0"
   },
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=18"
   }
 }
