--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "HOST=0.0.0.0 PORT=${PORT:-3000} node .next/standalone/server.js",
-    "postbuild": "mkdir -p .next/standalone/public && cp -r public/. .next/standalone/public 2>/dev/null || true && mkdir -p .next/standalone/.next && cp -r .next/static .next/standalone/.next/static"
+    "start": "HOST=0.0.0.0 PORT=${PORT:-3000} node .next/standalone/server.js"
   },
   "dependencies": {
     "next": "14.1.0",
