--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,17 +2,18 @@
   "name": "kyc-frontend",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "HOST=0.0.0.0 PORT=${PORT:-3000} node .next/standalone/server.js"
+    "start": "next start -p ${PORT:-3000}",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
