--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build",
-    "start": "HOST=0.0.0.0 next start -p ${PORT:-3000}"
+    "build": "next build && next export",
+    "start": "npx --yes serve -s out -l ${PORT:-3000}"
   },
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "serve": "14.2.3"
   }
 }
