--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "npx --yes serve -s out -l ${PORT:-3000}"
+    "start": "PORT=${PORT:-3000} HOST=0.0.0.0 npx --yes serve -s out -l tcp://0.0.0.0:${PORT}"
   },
   "dependencies": {
     "next": "14.1.0",
