--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,14 @@
 {
   "name": "kyc-frontend",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
-    "start": "PORT=${PORT:-3000} HOST=0.0.0.0 npx --yes serve -s out -l tcp://0.0.0.0:${PORT}"
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "npx serve -s out -l ${PORT:-3000}"
   },
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "serve": "14.2.3"
+    "react-dom": "18.2.0"
   }
 }
