--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "npx serve -s out -l ${PORT:-3000}"
+    "build": "next build",
+    "start": "npx serve -s out -l tcp://0.0.0.0:${PORT:-3000}"
   },
   "dependencies": {
     "next": "14.1.0",
