--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_BASE=https://kyc-cloud-starter-production.up.railway.app
+NEXT_PUBLIC_API_BASE=https://kyc-cloud-starter-production.up.railway.app/
