--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,3 +12,10 @@
     "react-dom": "18.2.0"
   }
 }
+{
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "npx serve -s out -l tcp://0.0.0.0:${PORT}"
+  }
+}
