--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-boto3==1.35.21
-redis==5.0.8
-pydantic==2.9.2
-python-multipart==0.0.9
+fastapi
+uvicorn[standard]
+boto3
+redis
+pydantic
+opencv-python-headless==4.10.0.84
+Pillow
+openai>=1.40.0
