--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,19 @@
 {
   "name": "kyc-frontend",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "npx serve -s out -l tcp://0.0.0.0:${PORT:-3000}"
+    "start": "next start -p ${PORT:-3000}"
   },
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
-}
-{
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "npx serve -s out -l tcp://0.0.0.0:${PORT}"
+    "react-dom": "18.2.0",
+    "axios": "1.7.7"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
