--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,10 @@
     "start": "next start -p ${PORT:-3000}"
   },
   "dependencies": {
+    "axios": "1.7.7",
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "1.7.7"
+    "react-dom": "18.2.0"
   },
   "engines": {
     "node": ">=18"
